// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css > common with scoped 1`] = `
"
    .bg-white[data-v-0f84999b] {
      --tw-bg-opacity: 1;
      background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
    }"
`;

exports[`css > vue scoped .gap-y-4 1`] = `
"@media (min-width: 768px) {
      .tw-a {
      }
    }"
`;

exports[`css > vue scoped .gap-y-4[data-v-0f84999b] 1`] = `
"@media (min-width: 768px) {
      .gap-y-4[data-v-0f84999b] {
      }
    }"
`;

exports[`css > vue scoped no ignore .gap-y-4[data-v-0f84999b] 1`] = `
"@media (min-width: 768px) {
      .tw-a[data-v-0f84999b] {
      }
    }"
`;

exports[`css > vue.scoped.css 1`] = `
".flex[data-v-0f84999b] {
  display: flex;
}
.grid[data-v-0f84999b] {
  display: grid;
}
.hidden[data-v-0f84999b] {
  display: none;
}
.tw-h[data-v-0f84999b] {
  flex-direction: column;
}
.flex-col-reverse[data-v-0f84999b] {
  flex-direction: column-reverse;
}
.place-content-center[data-v-0f84999b] {
  place-content: center;
}
.tw-f[data-v-0f84999b] {
  align-items: center;
}
.justify-end[data-v-0f84999b] {
  justify-content: flex-end;
}
.tw-g[data-v-0f84999b] {
  justify-content: center;
}
.flex-1[data-v-0f84999b] {
  flex: 1 1 0%;
}
.order-last[data-v-0f84999b] {
  order: 9999;
}
.tw-l[data-v-0f84999b] {
  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
}
.tw-mc[data-v-0f84999b] {
  font-weight: 600;
}
.tw-ga[data-v-0f84999b] {
  font-weight: 700;
}
.h-32[data-v-0f84999b] {
  height: 8rem;
}
.h-\\\\[70px\\\\][data-v-0f84999b] {
  height: 70px;
}
.text-4xl[data-v-0f84999b] {
  font-size: 2.25rem;
  line-height: 2.5rem;
}
.text-xl[data-v-0f84999b] {
  font-size: 1.25rem;
  line-height: 1.75rem;
}
.tw-m[data-v-0f84999b] {
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.tw-lc[data-v-0f84999b] {
  font-size: 1.5rem;
  line-height: 2rem;
}
.mx-auto[data-v-0f84999b] {
  margin-left: auto;
  margin-right: auto;
}
.mb-2[data-v-0f84999b] {
  margin-bottom: 0.5rem;
}
.max-w-\\\\[960px\\\\][data-v-0f84999b] {
  max-width: 960px;
}
.tw-a[data-v-0f84999b] {
  min-height: 100vh;
}
.p-1[data-v-0f84999b] {
  padding: 0.25rem;
}
.px-4[data-v-0f84999b] {
  padding-left: 1rem;
  padding-right: 1rem;
}
.py-14[data-v-0f84999b] {
  padding-bottom: 3.5rem;
  padding-top: 3.5rem;
}
.py-6[data-v-0f84999b] {
  padding-bottom: 1.5rem;
  padding-top: 1.5rem;
}
.tw-dc[data-v-0f84999b] {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}
.pt-\\\\[58px\\\\][data-v-0f84999b] {
  padding-top: 58px;
}
.tw-t[data-v-0f84999b] {
  padding-bottom: 1.5rem;
}
.absolute[data-v-0f84999b] {
  position: absolute;
}
.relative[data-v-0f84999b] {
  position: relative;
}
.inset-y-0[data-v-0f84999b] {
  bottom: 0;
  top: 0;
}
.inset-x-0[data-v-0f84999b] {
  left: 0;
  right: 0;
}
.tw-b[data-v-0f84999b] {
  left: 0;
}
.right-0[data-v-0f84999b] {
  right: 0;
}
.-top-\\\\[58px\\\\][data-v-0f84999b] {
  top: -58px;
}
.-top-3[data-v-0f84999b] {
  top: -0.75rem;
}
.focus-visible\\\\:ring-2[data-v-0f84999b]:focus-visible {
  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
}
.tw-c[data-v-0f84999b] {
  text-align: center;
}
.text-black[data-v-0f84999b] {
  --tw-text-opacity: 1;
  color: rgba(0, 0, 0, var(--tw-text-opacity));
}
.text-gray-700[data-v-0f84999b] {
  --tw-text-opacity: 1;
  color: rgba(66, 66, 66, var(--tw-text-opacity));
}
.hover\\\\:text-black[data-v-0f84999b]:hover {
  --tw-text-opacity: 1;
  color: rgba(0, 0, 0, var(--tw-text-opacity));
}
.antialiased[data-v-0f84999b] {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.tw-e[data-v-0f84999b] {
  width: 100%;
}
.w-\\\\[20\\\\%\\\\][data-v-0f84999b] {
  width: 20%;
}
.tw-d[data-v-0f84999b] {
  z-index: 10;
}
.z-1[data-v-0f84999b] {
  z-index: 1;
}
.gap-6[data-v-0f84999b] {
  grid-gap: 1.5rem;
  gap: 1.5rem;
}
.gap-3[data-v-0f84999b] {
  grid-gap: 0.75rem;
  gap: 0.75rem;
}
.gap-x-4[data-v-0f84999b] {
  grid-column-gap: 1rem;
  -webkit-column-gap: 1rem;
  -moz-column-gap: 1rem;
  column-gap: 1rem;
}
.gap-y-16[data-v-0f84999b] {
  grid-row-gap: 4rem;
  -webkit-row-gap: 4rem;
  -moz-row-gap: 4rem;
  row-gap: 4rem;
}
.gap-y-4[data-v-0f84999b] {
  grid-row-gap: 1rem;
  -webkit-row-gap: 1rem;
  -moz-row-gap: 1rem;
  row-gap: 1rem;
}
.gap-y-2[data-v-0f84999b] {
  grid-row-gap: 0.5rem;
  -webkit-row-gap: 0.5rem;
  -moz-row-gap: 0.5rem;
  row-gap: 0.5rem;
}
.grid-cols-2[data-v-0f84999b] {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}
.col-span-2[data-v-0f84999b] {
  -ms-grid-column-span: span 2 / span 2;
  grid-column: span 2 / span 2;
}
.row-span-2[data-v-0f84999b] {
  -ms-grid-row-span: span 2 / span 2;
  grid-row: span 2 / span 2;
}
.transition-opacity[data-v-0f84999b] {
  transition-duration: 0.15s;
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
.duration-300[data-v-0f84999b] {
  transition-duration: 0.3s;
}
@media (min-width: 640px) {
  .sm\\\\:flex-row[data-v-0f84999b] {
    flex-direction: row;
  }
  .sm\\\\:justify-between[data-v-0f84999b] {
    justify-content: space-between;
  }
  .sm\\\\:h-34[data-v-0f84999b] {
    height: 8.5rem;
  }
  .sm\\\\:text-base[data-v-0f84999b] {
    font-size: 1rem;
    line-height: 1.5rem;
  }
  .sm\\\\:text-5xl[data-v-0f84999b] {
    font-size: 3rem;
    line-height: 1;
  }
  .sm\\\\:min-h-\\\\[220px\\\\][data-v-0f84999b] {
    min-height: 220px;
  }
  .sm\\\\:px-6[data-v-0f84999b] {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
  .sm\\\\:px-28[data-v-0f84999b] {
    padding-left: 7rem;
    padding-right: 7rem;
  }
  .sm\\\\:col-span-1[data-v-0f84999b] {
    -ms-grid-column-span: span 1 / span 1;
    grid-column: span 1 / span 1;
  }
}
@media (min-width: 768px) {
  .md\\\\:min-h-\\\\[180px\\\\][data-v-0f84999b] {
    min-height: 180px;
  }
}
@media (min-width: 1024px) {
  .lg\\\\:flex-col[data-v-0f84999b] {
    flex-direction: column;
  }
  .lg\\\\:order-none[data-v-0f84999b] {
    order: 0;
  }
  .lg\\\\:min-h-min[data-v-0f84999b] {
    min-height: -moz-min-content;
    min-height: min-content;
  }
  .lg\\\\:py-7[data-v-0f84999b] {
    padding-bottom: 1.75rem;
    padding-top: 1.75rem;
  }
  .lg\\\\:px-8[data-v-0f84999b] {
    padding-left: 2rem;
    padding-right: 2rem;
  }
  .lg\\\\:grid-cols-10[data-v-0f84999b] {
    grid-template-columns: repeat(10, minmax(0, 1fr));
  }
  .lg\\\\:col-span-10[data-v-0f84999b] {
    -ms-grid-column-span: span 10 / span 10;
    grid-column: span 10 / span 10;
  }
  .lg\\\\:col-span-6[data-v-0f84999b] {
    -ms-grid-column-span: span 6 / span 6;
    grid-column: span 6 / span 6;
  }
  .lg\\\\:col-span-4[data-v-0f84999b] {
    -ms-grid-column-span: span 4 / span 4;
    grid-column: span 4 / span 4;
  }
}
@media (prefers-color-scheme: dark) {
  .dark\\\\:bg-black[data-v-0f84999b] {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
  }
  .dark\\\\:bg-white\\\\/10[data-v-0f84999b] {
    --tw-bg-opacity: 0.1;
    background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
  }
  .dark\\\\:bg-gray-900[data-v-0f84999b] {
    --tw-bg-opacity: 1;
    background-color: rgba(24, 24, 27, var(--tw-bg-opacity));
  }
  .dark\\\\:border-transparent[data-v-0f84999b] {
    border-color: transparent;
  }
  .dark\\\\:border-gray-900[data-v-0f84999b] {
    --tw-border-opacity: 1;
    border-color: rgba(24, 24, 27, var(--tw-border-opacity));
  }
  .dark\\\\:border-none[data-v-0f84999b] {
    border-style: none;
  }
  .dark\\\\:block[data-v-0f84999b] {
    display: block;
  }
  .dark\\\\:hidden[data-v-0f84999b] {
    display: none;
  }
  .dark\\\\:text-white[data-v-0f84999b] {
    --tw-text-opacity: 1;
    color: rgba(255, 255, 255, var(--tw-text-opacity));
  }
  .dark\\\\:text-gray-300[data-v-0f84999b] {
    --tw-text-opacity: 1;
    color: rgba(189, 189, 189, var(--tw-text-opacity));
  }
  .dark\\\\:hover\\\\:text-white[data-v-0f84999b]:hover {
    --tw-text-opacity: 1;
    color: rgba(255, 255, 255, var(--tw-text-opacity));
  }
}
"
`;
